Revision history for Perl extension Module::Build.

  - Honor environmental variables when using TAP::Harness directly [Leon Timmermans]

  - Reintroduce some level of perl 5.6 support [Leon Timmermans]
    Note that this comes with no guarantees or commitment

  - Allow Devel::Cover usage with TAP::Harness [Philipp Gortan]

0.4214 - Fri Jun 12 00:25:00 CEST 2015

  - Released 0.42_13 as 0.4214

0.42_13 - Sat Jun  6 21:18:24 CEST 2015

  [BUG FIXES]

  - Handle failure to guess license from key better

  [ENHANCEMENTS]

  - Output data in a stable order [Jérémy Bobbio]

0.4212 - Sun May 17 00:33:34 CEST 2015

  [BUG FIXES]

  - Revert "Stop using version->normal(); prefer stringify()"

0.4211 - Tue Jan 20 01:33:42 CET 2015

  [BUG FIXES]

  - Fix t/actions/installdeps.t to work on "perl in space" [Ed J]

  - Stop using version->normal(); prefer stringify() [John Peacock]

  [DEPRECATIONS]

  - inc::latest has been split out to a separate distribution on CPAN.
    It is an optional prerequisite, only needed for the experimental
    bundling feature.

0.4210 - Mon Sep  1 13:30:29 CEST 2014

  [BUG FIXES]

  - Fixup CPAN::Meta dependency

  - Handle old releases of CPAN::Meta more gracefully.

0.4209 - Mon Sep  1 12:24:40 CEST 2014

  [BUG FIXES]

  - Stop calling UNIVERSAL::isa as a function

  [ENHANCEMENTS]

  - Use CPAN::Meta::Merge for meta_merge

  - Convert with CPAN::Meta::Convert in meta_add

  - Add configure requirements

0.4208 - Mon Aug 18 21:44:38 CEST 2014

  [BUG FIXES]

  - Removed missed references to Module::Build::Version

0.4207 - Sat Aug 16 12:56:59 CEST 2014

  [BUG FIXES]

  - Fix type installdir -> installdirs [Leon Timmermans, Vitaliy Tokarev]

  [DEPRECATIONS]

  - Module::Build::YAML has been removed

  - Module::Build::ModuleInfo has been removed

  - Module::Build::Version has been removed

  - Get rid of "use vars"

  - Added use warnings to all modules

0.4206 - Sat Jul 12 14:03:01 CEST 2014

  [BUG FIXES]
